// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full article with style 1`] = `
.c4 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c5 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c23 {
  color: #333333;
  display: block;
  font-family: TimesDigitalW04-Regular,TimesDigitalW04-Regular-fallback,serif;
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c23:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c26 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
}

.c19 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c29 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c30 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c25 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c24 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: block;
}

.c20 {
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c20.hidden {
  visibility: hidden;
}

.c21 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular,TimesDigitalW04-Regular-fallback,serif;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c22 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c27 {
  clear: both;
  min-height: 283px;
  margin: 30px 0;
  box-sizing: content-box;
  padding: 0 0 10px;
  border-bottom: 1px solid rgb(219,219,219);
}

.c28 {
  border-bottom: 1px solid rgb(219,219,219);
  color: #696969;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular,TimesDigitalW04-Regular-fallback,serif;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  margin: 0 0 10px;
  padding: 0 0 5px;
  text-align: center;
  text-transform: uppercase;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 0;
}

.c2 > .c14 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c18 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c17 {
  background-color: #FFFFFF;
  height: 60px;
}

.c17 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c17.tc-sticky {
  will-change: height,box-shadow;
}

.c17[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c17[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c16 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c16 + .c15 {
  margin-top: -1px !important;
}

.c16:last-child {
  margin-bottom: 30px;
}

.c16.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c12 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-family: Roboto-Regular,Roboto-Regular-fallback,sans-serif;
  font-size: 14px;
  line-height: 17px;
  color: #696969;
  margin-top: 15px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 15px;
}

.c7 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-top: 5px;
  padding-bottom: 15px;
}

.c3 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c6 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-weight: 400;
  font-size: 30px;
  line-height: 33px;
  color: #1D1D1B;
  margin-bottom: 10px;
  text-align: center;
}

.c10 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  max-width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: none;
}

.c8 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-weight: 400;
  font-family: TimesModern-Regular,TimesModern-Regular-fallback,serif;
  font-size: 20px;
  line-height: 26px;
  color: #333333;
  margin-bottom: 15px;
  padding-left: 10px;
  padding-right: 10px;
  text-align: center;
}

.c13 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c23 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c23 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c26 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c19 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c29 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c29 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c30 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c30 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c25 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c24 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c24 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c20 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c20 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c22 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c22:first-of-type {
    margin-right: 1.5%;
  }

  .c22:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:768px) {
  .c27 {
    min-height: 123px;
  }
}

@media (min-width:970px) {
  .c27 {
    min-height: 283px;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c16 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c16 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c16 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c12 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c7 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c6 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c10 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c9 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c11 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c8 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c8 {
    margin-bottom: 20px;
  }
}

@media (min-width:768px) {
  .c13 {
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c13 {
    width: 56.2%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Camilla Long, Environment Editor"},"articleSection":"Some Section","keywords":"[\\"Section:Some Section\\"]"}
      </script>
    </Helmet>
    <div
      className="c0"
    >
      <AdContainer
        marginBottom={0}
      />
    </div>
    <main
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          alignItems="center"
          className="c3"
          marginBottom="25px"
          paddingLeft="10px"
          paddingRight="10px"
          paddingTop="35px"
        >
          <div
            className="c4"
            marginBottom="10px"
          >
            <div
              className="c5"
              color="#1D1D1B"
              fontFamily="Roboto-Regular, Roboto-Regular-fallback, sans-serif"
              fontSize={12}
              fontWeight="400"
              letterSpacing={0.5}
              lineHeight="12px"
              marginBottom={0}
              marginTop={-1}
              paddingTop={1}
            >
              SOME LABEL
            </div>
          </div>
          <h1
            className="c6"
          >
            Some Headline
          </h1>
          <div
            className="c7"
          >
            <ArticleFlags />
          </div>
          <h2
            className="c8"
          >
            Some Standfirst
          </h2>
          <div
            className="c9"
          >
            <div
              className="c10"
              flexDirection="row"
              flexWrap="wrap"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c11"
            />
            <div
              className="c10"
              flexDirection="row"
              flexWrap="wrap"
            >
              <div
                className="c12"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <ArticleLeadAsset
          className="c13"
          marginBottom="20px"
        />
        <div
          className="c14 c15 c16"
        >
          <div
            display="none"
          />
          <div>
            <div
              className="c17"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c18"
      >
        <div>
          <div>
            <div
              className="c19"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <div
          className="group-3 hidden c20"
        >
          <h2
            className="c21"
          >
            Sponsored
          </h2>
          <div
            className="c22"
          />
          <div
            className="c22"
          />
        </div>
        <p
          className="c23"
        >
          Some content
        </p>
        <div
          className="c24"
        >
          <div
            className="c25"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="c19"
        >
          <figure
            margin={0}
          >
            <div
              className="c4"
              paddingBottom="56.25%"
              position="relative"
            >
              <div
                className="c4"
                height="100%"
                position="absolute"
                width="100%"
              >
                <div
                  className="lcpItem"
                  height="100%"
                  width="100%"
                >
                  <div
                    height="100%"
                    position="relative"
                    width="100%"
                  >
                    <video
                      className="video-js"
                      height="100%"
                      width="100%"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="c26"
              >
                <Caption />
              </div>
            </figcaption>
          </figure>
        </div>
        <div
          className="c27"
        >
          <h2
            className="c28"
          >
            Advertisement
          </h2>
          <AdContainer />
        </div>
        <div>
          <div>
            <div
              className="c29"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div>
          <div>
            <div
              className="c30"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the culture magazine 1`] = `
.c4 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c5 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c23 {
  color: #333333;
  display: block;
  font-family: TimesDigitalW04-Regular,TimesDigitalW04-Regular-fallback,serif;
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c23:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c26 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
}

.c19 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c29 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c30 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c25 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c24 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: block;
}

.c20 {
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c20.hidden {
  visibility: hidden;
}

.c21 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular,TimesDigitalW04-Regular-fallback,serif;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c22 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c27 {
  clear: both;
  min-height: 283px;
  margin: 30px 0;
  box-sizing: content-box;
  padding: 0 0 10px;
  border-bottom: 1px solid rgb(219,219,219);
}

.c28 {
  border-bottom: 1px solid rgb(219,219,219);
  color: #696969;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular,TimesDigitalW04-Regular-fallback,serif;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  margin: 0 0 10px;
  padding: 0 0 5px;
  text-align: center;
  text-transform: uppercase;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 0;
}

.c2 > .c14 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c18 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c17 {
  background-color: #FFFFFF;
  height: 60px;
}

.c17 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c17.tc-sticky {
  will-change: height,box-shadow;
}

.c17[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c17[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c16 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c16 + .c15 {
  margin-top: -1px !important;
}

.c16:last-child {
  margin-bottom: 30px;
}

.c16.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c12 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-family: Roboto-Regular,Roboto-Regular-fallback,sans-serif;
  font-size: 14px;
  line-height: 17px;
  color: #696969;
  margin-top: 15px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 15px;
}

.c7 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-top: 5px;
  padding-bottom: 15px;
}

.c3 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c6 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-weight: 400;
  font-family: TimesModern-Bold,TimesModern-Bold-fallback,serif;
  font-size: 30px;
  line-height: 33px;
  color: #1D1D1B;
  margin-bottom: 10px;
  text-align: center;
}

.c10 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  max-width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: none;
}

.c8 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-weight: 400;
  font-family: TimesModern-Regular,TimesModern-Regular-fallback,serif;
  font-size: 20px;
  line-height: 26px;
  color: #333333;
  margin-bottom: 15px;
  padding-left: 10px;
  padding-right: 10px;
  text-align: center;
}

.c13 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c23 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c23 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c26 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c19 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c29 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c29 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c30 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c30 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c25 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c24 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c24 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c20 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c20 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c22 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c22:first-of-type {
    margin-right: 1.5%;
  }

  .c22:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:768px) {
  .c27 {
    min-height: 123px;
  }
}

@media (min-width:970px) {
  .c27 {
    min-height: 283px;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c16 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c16 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c16 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c12 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c7 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c6 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c10 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c9 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c11 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c8 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c8 {
    margin-bottom: 20px;
  }
}

@media (min-width:768px) {
  .c13 {
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c13 {
    width: 56.2%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Camilla Long, Environment Editor"},"articleSection":"Some Section","keywords":"[\\"Section:Some Section\\"]"}
      </script>
    </Helmet>
    <div
      className="c0"
    >
      <AdContainer
        marginBottom={0}
      />
    </div>
    <main
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          alignItems="center"
          className="c3"
          marginBottom="25px"
          paddingLeft="10px"
          paddingRight="10px"
          paddingTop="35px"
        >
          <div
            className="c4"
            marginBottom="10px"
          >
            <div
              className="c5"
              color="#7B0046"
              fontFamily="Roboto-Regular, Roboto-Regular-fallback, sans-serif"
              fontSize={12}
              fontWeight="400"
              letterSpacing={0.5}
              lineHeight="12px"
              marginBottom={0}
              marginTop={-1}
              paddingTop={1}
            >
              SOME LABEL
            </div>
          </div>
          <h1
            className="c6"
          >
            Some Headline
          </h1>
          <div
            className="c7"
          >
            <ArticleFlags />
          </div>
          <h2
            className="c8"
          >
            Some Standfirst
          </h2>
          <div
            className="c9"
          >
            <div
              className="c10"
              flexDirection="row"
              flexWrap="wrap"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c11"
            />
            <div
              className="c10"
              flexDirection="row"
              flexWrap="wrap"
            >
              <div
                className="c12"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <ArticleLeadAsset
          className="c13"
          marginBottom="20px"
        />
        <div
          className="c14 c15 c16"
        >
          <div
            display="none"
          />
          <div>
            <div
              className="c17"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c18"
      >
        <div>
          <div>
            <div
              className="c19"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <div
          className="group-3 hidden c20"
        >
          <h2
            className="c21"
          >
            Sponsored
          </h2>
          <div
            className="c22"
          />
          <div
            className="c22"
          />
        </div>
        <p
          className="c23"
        >
          Some content
        </p>
        <div
          className="c24"
        >
          <div
            className="c25"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="c19"
        >
          <figure
            margin={0}
          >
            <div
              className="c4"
              paddingBottom="56.25%"
              position="relative"
            >
              <div
                className="c4"
                height="100%"
                position="absolute"
                width="100%"
              >
                <div
                  className="lcpItem"
                  height="100%"
                  width="100%"
                >
                  <div
                    height="100%"
                    position="relative"
                    width="100%"
                  >
                    <video
                      className="video-js"
                      height="100%"
                      width="100%"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="c26"
              >
                <Caption />
              </div>
            </figcaption>
          </figure>
        </div>
        <div
          className="c27"
        >
          <h2
            className="c28"
          >
            Advertisement
          </h2>
          <AdContainer />
        </div>
        <div>
          <div>
            <div
              className="c29"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div>
          <div>
            <div
              className="c30"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the style magazine 1`] = `
.c4 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c5 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c23 {
  color: #333333;
  display: block;
  font-family: TimesDigitalW04-Regular,TimesDigitalW04-Regular-fallback,serif;
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c23:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c26 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
}

.c19 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c29 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c30 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c25 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c24 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: block;
}

.c20 {
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c20.hidden {
  visibility: hidden;
}

.c21 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular,TimesDigitalW04-Regular-fallback,serif;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c22 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c27 {
  clear: both;
  min-height: 283px;
  margin: 30px 0;
  box-sizing: content-box;
  padding: 0 0 10px;
  border-bottom: 1px solid rgb(219,219,219);
}

.c28 {
  border-bottom: 1px solid rgb(219,219,219);
  color: #696969;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular,TimesDigitalW04-Regular-fallback,serif;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  margin: 0 0 10px;
  padding: 0 0 5px;
  text-align: center;
  text-transform: uppercase;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 0;
}

.c2 > .c14 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c18 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c17 {
  background-color: #FFFFFF;
  height: 60px;
}

.c17 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c17.tc-sticky {
  will-change: height,box-shadow;
}

.c17[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c17[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c16 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c16 + .c15 {
  margin-top: -1px !important;
}

.c16:last-child {
  margin-bottom: 30px;
}

.c16.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c12 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-family: Roboto-Regular,Roboto-Regular-fallback,sans-serif;
  font-size: 14px;
  line-height: 17px;
  color: #696969;
  margin-top: 15px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 15px;
}

.c7 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-top: 5px;
  padding-bottom: 15px;
}

.c3 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c6 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-weight: 400;
  font-family: TimesModern-Bold,TimesModern-Bold-fallback,serif;
  font-size: 30px;
  line-height: 33px;
  color: #1D1D1B;
  margin-bottom: 10px;
  text-align: center;
  text-transform: none;
}

.c10 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  max-width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: none;
}

.c8 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-weight: 400;
  font-family: TimesModern-Regular,TimesModern-Regular-fallback,serif;
  font-size: 20px;
  line-height: 26px;
  color: #333333;
  margin-bottom: 15px;
  padding-left: 10px;
  padding-right: 10px;
  text-align: center;
}

.c13 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c23 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c23 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c26 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c19 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c29 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c29 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c30 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c30 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c25 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c24 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c24 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c20 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c20 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c22 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c22:first-of-type {
    margin-right: 1.5%;
  }

  .c22:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:768px) {
  .c27 {
    min-height: 123px;
  }
}

@media (min-width:970px) {
  .c27 {
    min-height: 283px;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c16 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c16 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c16 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c12 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c7 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c6 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c10 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c9 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c11 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c8 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c8 {
    margin-bottom: 20px;
  }
}

@media (min-width:768px) {
  .c13 {
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c13 {
    width: 56.2%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Camilla Long, Environment Editor"},"articleSection":"Some Section","keywords":"[\\"Section:Some Section\\"]"}
      </script>
    </Helmet>
    <div
      className="c0"
    >
      <AdContainer
        marginBottom={0}
      />
    </div>
    <main
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          alignItems="center"
          className="c3"
          marginBottom="25px"
          paddingLeft="10px"
          paddingRight="10px"
          paddingTop="35px"
        >
          <div
            className="c4"
            marginBottom="10px"
          >
            <div
              className="c5"
              color="#BC3385"
              fontFamily="Roboto-Regular, Roboto-Regular-fallback, sans-serif"
              fontSize={12}
              fontWeight="400"
              letterSpacing={0.5}
              lineHeight="12px"
              marginBottom={0}
              marginTop={-1}
              paddingTop={1}
            >
              SOME LABEL
            </div>
          </div>
          <h1
            className="c6"
          >
            Some Headline
          </h1>
          <div
            className="c7"
          >
            <ArticleFlags />
          </div>
          <h2
            className="c8"
          >
            Some Standfirst
          </h2>
          <div
            className="c9"
          >
            <div
              className="c10"
              flexDirection="row"
              flexWrap="wrap"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c11"
            />
            <div
              className="c10"
              flexDirection="row"
              flexWrap="wrap"
            >
              <div
                className="c12"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <ArticleLeadAsset
          className="c13"
          marginBottom="20px"
        />
        <div
          className="c14 c15 c16"
        >
          <div
            display="none"
          />
          <div>
            <div
              className="c17"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c18"
      >
        <div>
          <div>
            <div
              className="c19"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <div
          className="group-3 hidden c20"
        >
          <h2
            className="c21"
          >
            Sponsored
          </h2>
          <div
            className="c22"
          />
          <div
            className="c22"
          />
        </div>
        <p
          className="c23"
        >
          Some content
        </p>
        <div
          className="c24"
        >
          <div
            className="c25"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="c19"
        >
          <figure
            margin={0}
          >
            <div
              className="c4"
              paddingBottom="56.25%"
              position="relative"
            >
              <div
                className="c4"
                height="100%"
                position="absolute"
                width="100%"
              >
                <div
                  className="lcpItem"
                  height="100%"
                  width="100%"
                >
                  <div
                    height="100%"
                    position="relative"
                    width="100%"
                  >
                    <video
                      className="video-js"
                      height="100%"
                      width="100%"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="c26"
              >
                <Caption />
              </div>
            </figcaption>
          </figure>
        </div>
        <div
          className="c27"
        >
          <h2
            className="c28"
          >
            Advertisement
          </h2>
          <AdContainer />
        </div>
        <div>
          <div>
            <div
              className="c29"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div>
          <div>
            <div
              className="c30"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the sunday times magazine 1`] = `
.c4 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
}

.c5 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
}

.c23 {
  color: #333333;
  display: block;
  font-family: TimesDigitalW04-Regular,TimesDigitalW04-Regular-fallback,serif;
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c23:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c26 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
}

.c19 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c29 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c30 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c25 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c24 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: block;
}

.c20 {
  clear: both;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c20.hidden {
  visibility: hidden;
}

.c21 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular,TimesDigitalW04-Regular-fallback,serif;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c22 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c27 {
  clear: both;
  min-height: 283px;
  margin: 30px 0;
  box-sizing: content-box;
  padding: 0 0 10px;
  border-bottom: 1px solid rgb(219,219,219);
}

.c28 {
  border-bottom: 1px solid rgb(219,219,219);
  color: #696969;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular,TimesDigitalW04-Regular-fallback,serif;
  -webkit-letter-spacing: 0.6px;
  -moz-letter-spacing: 0.6px;
  -ms-letter-spacing: 0.6px;
  letter-spacing: 0.6px;
  margin: 0 0 10px;
  padding: 0 0 5px;
  text-align: center;
  text-transform: uppercase;
}

.c2 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 0;
}

.c2 > .c14 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c18 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c17 {
  background-color: #FFFFFF;
  height: 60px;
}

.c17 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c17.tc-sticky {
  will-change: height,box-shadow;
}

.c17[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c17[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c16 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c16 + .c15 {
  margin-top: -1px !important;
}

.c16:last-child {
  margin-bottom: 30px;
}

.c16.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c12 {
  border: 0px solid black;
  box-sizing: border-box;
  color: rgb(0,0,0);
  display: inline;
  font-size: 14px;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-family: Roboto-Regular,Roboto-Regular-fallback,sans-serif;
  font-size: 14px;
  line-height: 17px;
  color: #696969;
  margin-top: 15px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 15px;
}

.c7 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  padding-top: 5px;
  padding-bottom: 15px;
}

.c3 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c6 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-weight: 400;
  font-family: TimesModern-Bold,TimesModern-Bold-fallback,serif;
  font-size: 30px;
  line-height: 33px;
  color: #1D1D1B;
  margin-bottom: 10px;
  text-align: center;
}

.c10 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  max-width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  display: none;
}

.c8 {
  border: 0px solid black;
  box-sizing: border-box;
  display: inline;
  font-family: sans-serif;
  margin: 0px;
  padding: 0px;
  white-space: pre-wrap;
  overflow-wrap: break-word;
  font-weight: 400;
  font-family: TimesModern-Regular,TimesModern-Regular-fallback,serif;
  font-size: 20px;
  line-height: 26px;
  color: #333333;
  margin-bottom: 15px;
  padding-left: 10px;
  padding-right: 10px;
  text-align: center;
}

.c13 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 {
  border: 0px solid black;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0px;
  min-height: 0px;
  min-width: 0px;
  padding: 0px;
  position: relative;
  z-index: 0;
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c23 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c23 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c26 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c19 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c29 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c29 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c30 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c30 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c25 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c24 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c24 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c20 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c20 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c22 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c22:first-of-type {
    margin-right: 1.5%;
  }

  .c22:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:768px) {
  .c27 {
    min-height: 123px;
  }
}

@media (min-width:970px) {
  .c27 {
    min-height: 283px;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c16 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c16 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c16 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c12 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c7 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c6 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c10 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c9 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c11 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c8 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c8 {
    margin-bottom: 20px;
  }
}

@media (min-width:768px) {
  .c13 {
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c13 {
    width: 56.2%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Camilla Long, Environment Editor"},"articleSection":"Some Section","keywords":"[\\"Section:Some Section\\"]"}
      </script>
    </Helmet>
    <div
      className="c0"
    >
      <AdContainer
        marginBottom={0}
      />
    </div>
    <main
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          alignItems="center"
          className="c3"
          marginBottom="25px"
          paddingLeft="10px"
          paddingRight="10px"
          paddingTop="35px"
        >
          <div
            className="c4"
            marginBottom="10px"
          >
            <div
              className="c5"
              color="#F13D00"
              fontFamily="Roboto-Regular, Roboto-Regular-fallback, sans-serif"
              fontSize={12}
              fontWeight="400"
              letterSpacing={0.5}
              lineHeight="12px"
              marginBottom={0}
              marginTop={-1}
              paddingTop={1}
            >
              SOME LABEL
            </div>
          </div>
          <h1
            className="c6"
          >
            Some Headline
          </h1>
          <div
            className="c7"
          >
            <ArticleFlags />
          </div>
          <h2
            className="c8"
          >
            Some Standfirst
          </h2>
          <div
            className="c9"
          >
            <div
              className="c10"
              flexDirection="row"
              flexWrap="wrap"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c11"
            />
            <div
              className="c10"
              flexDirection="row"
              flexWrap="wrap"
            >
              <div
                className="c12"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <ArticleLeadAsset
          className="c13"
          marginBottom="20px"
        />
        <div
          className="c14 c15 c16"
        >
          <div
            display="none"
          />
          <div>
            <div
              className="c17"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c18"
      >
        <div>
          <div>
            <div
              className="c19"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <div
          className="group-3 hidden c20"
        >
          <h2
            className="c21"
          >
            Sponsored
          </h2>
          <div
            className="c22"
          />
          <div
            className="c22"
          />
        </div>
        <p
          className="c23"
        >
          Some content
        </p>
        <div
          className="c24"
        >
          <div
            className="c25"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="c19"
        >
          <figure
            margin={0}
          >
            <div
              className="c4"
              paddingBottom="56.25%"
              position="relative"
            >
              <div
                className="c4"
                height="100%"
                position="absolute"
                width="100%"
              >
                <div
                  className="lcpItem"
                  height="100%"
                  width="100%"
                >
                  <div
                    height="100%"
                    position="relative"
                    width="100%"
                  >
                    <video
                      className="video-js"
                      height="100%"
                      width="100%"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="c26"
              >
                <Caption />
              </div>
            </figcaption>
          </figure>
        </div>
        <div
          className="c27"
        >
          <h2
            className="c28"
          >
            Advertisement
          </h2>
          <AdContainer />
        </div>
        <div>
          <div>
            <div
              className="c29"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div>
          <div>
            <div
              className="c30"
            >
              <ArticleImage />
            </div>
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;
